--- a/css/main.css
+++ b/css/main.css
@@ -250,12 +250,58 @@ content: '';
   .black-background .title{padding-top:80px;}
   .basic-courses{padding: 25px;}
 
+  .learner-items{list-style:none;padding:0px;}
+  .learner-container{padding-top:80px;}
+  .learner-engagment-img img {max-width:400px;float:right}
+ .learner-items li .circle{    background-color: #70bf90;
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    border-radius: 50%;margin-right:10px;}
+ .learner-items li p{display:inline}
+ .learner-items li p strong{padding-right:5px;font-size:20px}
+ .learner-items li {margin-bottom:20px;}
+ .learner-engagment-desc h3{margin-bottom:30px;}
+ .p20{padding:20px;}
+
+.container-artborad5 .content-banner h1{font-size:37px;margin-bottom:15px;}
+.container-artborad5 .content-banner p{font-size:20px}
+.container-artborad5 .container-banner img{float:right}
+.container-artborad5 .learner-items li{margin-bottom:30px;}
+.container-artborad5 .learner-engagment-img img{max-width:100%;float:right}
+.container-artborad5 .learner-engagment-desc h3{font-weight:bold}
+
+.container-artborad6 .content-banner p{font-size:22px;}
+.container-artborad6 .learner-engagment-img img{float:left}
+.container-artborad6 .img-right img{float:right}
+.container-artborad6  .learner-items li{margin-bottom:35px;}
+.container-artborad6  .learner-engagment-desc h3{font-weight:bold;margin-bottom:80px;margin-top:30px;}
+.container-artborad6 .learner-container{margin-bottom:50px;}
 
 
+.container-artborad7 .content-banner p{font-size:20px}
+.container-artborad7 .learner-engagment-desc h1{font-size:20px;font-weight:bold}
+.container-artborad7 .learner-engagment-desc p{font-size:16px;}
+.container-artborad7 .learner-engagment-img.right img{float:right}
+.container-artborad7 .learner-engagment-img.left img{float:left}
+.container-artborad7 .learner-engagment-desc{position:absolute;top:35%}
+.container-artborad7 .learner-engagment-img img{max-width:350px;}
 
+
+.container-artborad8 .content-banner h1{font-size:37px;margin-bottom:15px;}
+.container-artborad8 .content-banner p{font-size:20px}
+
+
+.container-artborad9 .content-banner h1{font-size:37px;margin-bottom:15px;}
+.container-artborad9 .content-banner p{font-size:24px}
+.container-artborad9 .learner-engagment-img.left img{float:left}
+.container-artborad9 .learner-engagment-img.right img{float:right}
 
 @media only screen and (max-width:768px)
 {
+    .process-desc{text-align:center}
+    .process-img img{float:none;max-width:250px;display:inline-block;margin:20px 0px;}
+    .process-img{text-align:center}
     .content-banner,.our-services-desc{position:static}
     .footer-content{text-align:center}
     .our-services{text-align:center}
@@ -267,5 +313,15 @@ content: '';
    .container-artborad3 .gray-background article .col-md-6 .process-desc{position:static}
     .container-artborad3 .gray-background article .col-md-6 .process-desc:before {background-image:none;    position: static;}
      .container-artborad3 .gray-background article .col-md-6 .process-desc:after {background-image:none;    position: static;}
+
+.learner-engagment-img.right img{float:none !important}
+.learner-engagment-img.left img{float:none !important}
+.learner-engagment-img img{max-width:250px;display:inline-block ;float:none !important}
+.learner-engagment-img{text-align:center}
      .basic-courses{text-align:center}
+     .learner-engagment-desc{position:static !important;}
+     .learner-container .col-md-6{margin-bottom:80px;}
+     .container-artborad7 .learner-engagment-img img{max-width:250px;}
+     .hidden-xs{display:none}
+     
 }
